# bevy-firebase

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs  firebase.json  firestore.rules  start-firebase-emulators.sh
.cargo/: config.toml
bevy-firebase-auth/: Cargo.toml  README.md  TODO.md
bevy-firebase-auth/src/: lib.rs
bevy-firebase-firestore/: Cargo.toml  README.md  TODO.md
bevy-firebase-firestore/examples/click-game/: main.rs  textbox_plugin.rs
bevy-firebase-firestore/src/: lib.rs
bevy-firebase-firestore/src/googleapis/: google.api.rs
examples/: crud-async.rs  crud-events.rs  crud-listener.rs  custom-events.rs  listener.rs
examples/click-game/: main.rs  textbox_plugin.rs  util.rs
src/: lib.rs  main.rs
src/googleapis/: google.firestore.v1.rs  google.r#type.rs  mod.rs
