[package]
name = "bevy-firebase-firestore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["tls"] }
futures-lite = "1.11.3"
bevy_macro_utils = "0.10.1"
bevy-tokio-tasks = "0.10.2"
bevy-firebase-auth = { version = "0.1.0", path = "../bevy-firebase-auth" }

[build-dependencies]
tonic-build = "0.9.2"
