[package]
name = "bevy-firebase-firestore"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache 2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.1"
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["tls"] }
futures-lite = "1.11.3"
bevy_macro_utils = "0.11.0"
bevy-tokio-tasks = "0.11.0"
bevy-firebase-auth = { version = "0.1.0", path = "../bevy-firebase-auth" }

[dev-dependencies]
open = "5.0.0"

[build-dependencies]
tonic-build = "0.9.2"
