[package]
name = "bevy-firebase-firestore"
version = "0.1.0"
description = "firebase firestore for the bevy game engine"
keywords = ["firebase","firestore","database","backend", "bevy"]
homepage = "https://bytemunch.dev/projects/bevy-firebase"
repository = "https://github.com/bytemunch/bevy-firebase"
readme = "README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.11.1"
prost = "0.11.9"
prost-types = "0.11.9"
tonic = { version = "0.9.2", features = ["tls"] }
futures-lite = "1.11.3"
bevy_macro_utils = "0.11.0"
bevy-tokio-tasks = "0.11.0"
bevy-firebase-auth = { version = "0.1.0", path = "../bevy-firebase-auth" }

[dev-dependencies]
open = "5.0.0"

[build-dependencies]
tonic-build = "0.9.2"
